# NiftyLib

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
include/core/: NiftyApp.h  NiftyError.h  NiftyErrorBase.h  NiftyEvent.h  NiftyLog.h  app.h  color.h  error.h  error_base.h  event.h  event_base.h  event_traits.h  log.h  num.h  parse_obj.h  string.h  util.h
include/etc/: NiftySVG.h  NiftyScallop.h  NiftyStikSVGTemplates.h
include/gui/: window.h
include/vk/: Image.h  NiftyVK.h  NiftyVKBuffer.h  NiftyVKCommon.h  NiftyVKDevice.h  NiftyVKGeometry.h  NiftyVKInstance.h  NiftyVKRender.h  NiftyVKShader.h  NiftyVKSurface.h  NiftyVKUtil.h  buffer.h  commands.h  common.h  device.h  geometry.h  handler.h  instance.h  scene.h  shader.h  surface.h  util.h
shaders/: simple_shader.frag  simple_shader.vert
src/: NiftStik.cpp  NiftyApp.cpp  NiftyColor.cpp  NiftyError.cpp  NiftyEvent.cpp  NiftyLog.cpp  NiftyNum.cpp  NiftySVG.cpp  NiftySVGElements.cpp  NiftyScallop.cpp  NiftyString.cpp  NiftyVK.cpp  NiftyVKBuffer.cpp  NiftyVKCommon.cpp  NiftyVKDevice.cpp  NiftyVKGeometry.cpp  NiftyVKInstance.cpp  NiftyVKMesh.cpp  NiftyVKPipeline.cpp  NiftyVKRender.cpp  NiftyVKShader.cpp  NiftyVKSurface.cpp  NiftyVKSwapchain.cpp  NiftyWindow.cpp
src/core/: NiftyApp.cpp  NiftyColor.cpp  NiftyError.cpp  NiftyEvent.cpp  NiftyLog.cpp  NiftyNum.cpp  app.cpp  color.cpp  error.cpp  event.cpp  event_base.cpp  log.cpp  num.cpp  parse_obj.cpp  string.cpp
src/etc/: NiftStik.cpp  NiftySVG.cpp  NiftySVGElements.cpp  NiftyScallop.cpp  NiftyString.cpp
src/gui/: NiftyWindow.cpp  window.cpp
src/include/: NiftyApp.h  NiftyCalc.h  NiftyColor.h  NiftyError.h  NiftyErrorBase.h  NiftyEvent.h  NiftyEventBase.h  NiftyGUI.h  NiftyLog.h  NiftyNum.h  NiftyObservable.h  NiftySVG.h  NiftySVGElements.h  NiftyScallop.h  NiftyStik.h  NiftyStikSVGTemplates.h  NiftyString.h  NiftyUtil.h  NiftyVK.h  NiftyVKBuffer.h  NiftyVKCommon.h  NiftyVKDevice.h  NiftyVKGeometry.h  NiftyVKInstance.h  NiftyVKMesh.h  NiftyVKPipeline.h  NiftyVKRender.h  NiftyVKShader.h  NiftyVKSurface.h  NiftyVKSwapchain.h  NiftyVKUtil.h  NiftyWindow.h
src/shaders/: picking_shader.frag  picking_shader.vert  simple_shader.frag  simple_shader.vert
src/vk/: NiftyVK.cpp  NiftyVKBuffer.cpp  NiftyVKCommon.cpp  NiftyVKDevice.cpp  NiftyVKGeometry.cpp  NiftyVKInstance.cpp  NiftyVKRender.cpp  NiftyVKShader.cpp  NiftyVKSurface.cpp  NiftyVKUtil.cpp  buffer.cpp  commands.cpp  common.cpp  device.cpp  geometry.cpp  handler.cpp  image.cpp  instance.cpp  scene.cpp  shader.cpp  surface.cpp  util.cpp
